--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: 1764969328@qqcom
   facebook:
   flickr:
-  github: Dahanhan517
+  github: https://github.com/Dahanhan517
   instagram:
   linkedin:
   pinterest:
